--- a/WPF.GettingStarted/Views/MainWindow.xaml
+++ b/WPF.GettingStarted/Views/MainWindow.xaml
@@ -2,20 +2,24 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 				          xmlns:catel="http://catel.codeplex.com"
-                  ShowInTaskbar="True" ResizeMode="CanResize" SizeToContent="Manual" WindowStartupLocation="Manual">
+                  ShowInTaskbar="True" 
+                  ResizeMode="CanResize" 
+                  SizeToContent="Manual" 
+                  WindowStartupLocation="Manual"
+                  Width="600" Height="400">
     
-    <!-- Resources -->
-    <catel:DataWindow.Resources>
-    </catel:DataWindow.Resources>
+  <!-- Resources -->
+  <catel:DataWindow.Resources>
+  </catel:DataWindow.Resources>
     
-    <!-- Content -->
-     <catel:StackGrid x:Name="LayoutRoot">
-		<catel:StackGrid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-		</catel:StackGrid.RowDefinitions>
+  <!-- Content -->
+  <catel:StackGrid x:Name="LayoutRoot">
+    <catel:StackGrid.RowDefinitions>
+      <RowDefinition Height="Auto" />
+      <RowDefinition Height="Auto" />
+    </catel:StackGrid.RowDefinitions>
 		
-		<Label Content="{Binding Title}" />
-        <Label Content="Here goes your real content" />
-    </catel:StackGrid>
+    <Label Content="{Binding Title}" />
+    <Label Content="Here goes your real content" />
+  </catel:StackGrid>
 </catel:DataWindow>
